@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms</groupId>
   <artifactId>opennms</artifactId>
-  <version>16.0.0-SNAPSHOT</version>
+  <version>17.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>OpenNMS</name>
   <url>http://opennms.org/</url>
@@ -13,8 +13,8 @@
   </description>
   <licenses>
     <license>
-      <name>GNU General Public License</name>
-      <url>http://www.gnu.org/licenses/gpl.html</url>
+      <name>GNU Affero General Public License</name>
+      <url>http://www.gnu.org/licenses/agpl.html</url>
       <comments>
         This Maven metadata is provided for informational purposes only. For specific licensing 
         questions, please contact: OpenNMS(R) Licensing (license@opennms.org)
@@ -36,6 +36,17 @@
     </notifiers>
   </ciManagement>
   <developers>
+    <developer>
+      <id>soleger</id>
+      <name>Seth Leger</name>
+      <email>seth@opennms.org</email>
+      <roles>
+        <role>OGP Member</role>
+        <role>Software Architect</role>
+      </roles>
+      <organization>The OpenNMS Group</organization>
+      <timezone>-5</timezone>
+    </developer>
     <developer>
       <id>brozow</id>
       <name>Matt Brozowski</name>
@@ -59,7 +70,7 @@
       <timezone>-5</timezone>
     </developer>
   </developers>
- <mailingLists>
+  <mailingLists>
     <mailingList>
       <name>OpenNMS Discuss List</name>
       <subscribe>https://lists.sourceforge.net/lists/listinfo/opennms-discuss</subscribe>
@@ -90,9 +101,9 @@
     </mailingList>
   </mailingLists>
   <scm>
-    <connection>scm:git:git://opennms.git.sourceforge.net/gitroot/opennms/opennms</connection>
-    <developerConnection>scm:git:ssh://${user.name}@opennms.git.sourceforge.net/gitroot/opennms/opennms</developerConnection>
-    <url>http://opennms.git.sourceforge.net/git/gitweb.cgi?p=opennms/opennms;a=shortlog;h=refs/heads/master</url>
+    <connection>scm:git:https://github.com/OpenNMS/opennms.git</connection>
+    <developerConnection>scm:git:https://${user.name}@github.com/OpenNMS/opennms.git</developerConnection>
+    <url>https://github.com/OpenNMS/opennms</url>
   </scm>
   <modules>
     <!-- new structure -->
@@ -171,7 +182,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.3.7</version>
+        <version>2.5.3</version>
         <extensions>true</extensions>
         <configuration>
           <obrRepository>NONE</obrRepository>
@@ -202,7 +213,7 @@
       <plugin>
         <groupId>org.opennms.maven.plugins</groupId>
         <artifactId>features-maven-plugin</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0</version>
         <executions>
           <execution>
             <id>features.xml</id>
@@ -456,11 +467,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
         <version>2.6</version>
-        <executions>
-          <execution>
-            <goals><goal>clean</goal></goals>
-          </execution>
-        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -723,6 +729,45 @@
           </dependency>
         </dependencies>
       </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.4.201502262128</version>
+        <configuration>
+          <!-- TODO: Figure out how to configure this to be the same path for all projects -->
+          <classDumpDir>${project.build.directory}/classes</classDumpDir>
+          <!-- TODO: Figure out how to configure this to be the same path for all projects -->
+          <destFile>${project.build.directory}/jacoco.exec</destFile>
+          <!-- Append all .exec content to the same file -->
+          <append>true</append>
+          <includes>
+            <!-- All OpenNMS Java packages -->
+            <include>org/opennms/**</include>
+            <include>liquibase/ext/opennms/**</include>
+            <include>org/openoss/opennms/**</include>
+          </includes>
+          <excludes>
+            <!-- Spring CGLIB proxies -->
+            <exclude>**/*FastClassBySpringCGLIB*</exclude>
+            <exclude>**/*EnhancerBySpringCGLIB*</exclude>
+            <!-- CGLIB proxies -->
+            <exclude>**/*EnhancerByCGLIB*</exclude>
+            <!-- javassist proxies -->
+            <exclude>**/*_jvst*</exclude>
+            <!-- Unit test classes -->
+            <exclude>**/*Test.*</exclude>
+            <exclude>**/*TestCase.*</exclude>
+            <!-- Duplicate classes -->
+            <exclude>**/SnmpUtilsTest*</exclude>
+            <!-- Drools rules -->
+            <exclude>org/opennms/netmgt/correlation/drools/Println*</exclude>
+            <exclude>org/opennms/netmgt/correlation/ncs/Println*</exclude>
+            <exclude>org/opennms/netmgt/correlation/ncs/Rule*</exclude>
+            <exclude>org/opennms/netmgt/correlation/ncs/SendComponentImpactedEvent*</exclude>
+            <exclude>org/opennms/netmgt/correlation/ncs/SendComponentResolvedEvent*</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
     </plugins>
   </pluginManagement>
    <plugins>
@@ -854,6 +899,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven.surefire.plugin.version}</version>
         <configuration>
+          <!-- Don't specify argLine here or it will override the argLine property value -->
           <systemPropertyVariables>
             <java.awt.headless>true</java.awt.headless>
             <mock.logLevel>${mock.logLevel}</mock.logLevel>
@@ -879,10 +925,9 @@
           </systemPropertyVariables>
           <forkCount>1</forkCount>
           <reuseForks>false</reuseForks>
-          <argLine>-Xmx1024m</argLine>
           <includes>
             <include>**/*Test.java</include>
-          </includes>          
+          </includes>
         </configuration>
       </plugin>
       <plugin>
@@ -922,6 +967,22 @@
           </dependency>
         </dependencies>
       </plugin>
+      <!-- jacoco code coverage testing library -->
+      <!--
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>default-prepare-agent</id>
+            <goals>
+              <!- - Add the jacoco agent configuration to the argLine for surefire - ->
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      -->
     </plugins>
   </build>
 
@@ -1011,6 +1072,19 @@
   </reporting>
 
   <properties>
+    <!--
+      Surefire forked JVM arguments
+      @see http://maven.apache.org/surefire/maven-surefire-plugin/examples/system-properties.html
+
+      Use 1GB of heap for running tests.
+
+      Set java.security.egd so that entropy exhaustion doesn't cause
+      problematic pauses when starting MockSnmpAgent in unit tests.
+
+      Add target/endorsed as an endorsed API directory in case projects require it.
+    -->
+    <argLine>-Xmx1g -Djava.security.egd=/dev/./urandom -Djava.endorsed.dirs=${basedir}/target/endorsed</argLine>
+
     <build.skip.tarball>false</build.skip.tarball>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -1039,7 +1113,7 @@
     <install.version>${project.version}</install.version>
     <display.version>${install.version}</display.version>
     <opennms.home>${dist.dir}/${dist.name}</opennms.home>
-    <opennms.osgi.version>16.0.0.SNAPSHOT</opennms.osgi.version>
+    <opennms.osgi.version>17.0.0.SNAPSHOT</opennms.osgi.version>
     <maven.metadata.legacy>true</maven.metadata.legacy>
     <root.dir>${project.basedir}</root.dir>
     <dist.dir>${root.dir}/target</dist.dir>
@@ -1104,7 +1178,7 @@
     <!-- dependency versions -->
     <oldAsmVersion>99.99.99-exclude-and-use-org.ow2.asm.asm-all-instead</oldAsmVersion>
     <asmVersion>5.0.3</asmVersion>
-    <asciidoctorVersion>1.5.2</asciidoctorVersion>
+    <asciidoctorVersion>1.5.2.1</asciidoctorVersion>
     <asciidoctorjVersion>1.5.2</asciidoctorjVersion>
     <asciidoctorjPdfVersion>1.5.0-alpha.6</asciidoctorjPdfVersion>
     <activemqVersion>5.10.0</activemqVersion>
@@ -1114,6 +1188,8 @@
     <commonsBeanutilsVersion>1.8.3</commonsBeanutilsVersion>
     <commonsCodecVersion>1.9</commonsCodecVersion>
     <commonsCollectionsVersion>3.2.1</commonsCollectionsVersion>
+    <commonsConfigurationVersion>1.6</commonsConfigurationVersion>
+    <commonsDigesterVersion>2.1</commonsDigesterVersion>
     <commonsIoVersion>2.4</commonsIoVersion>
     <commonsLangVersion>2.6</commonsLangVersion>
     <commonsLoggingVersion>99.99.99-use-jcl-over-slf4j</commonsLoggingVersion>
@@ -1131,6 +1207,8 @@
     <jacksonVersion>1.9.13</jacksonVersion>
     <jasperreportsVersion>5.6.1</jasperreportsVersion>
     <jettyVersion>8.1.10.v20130312</jettyVersion>
+    <jodaTimeVersion>2.1</jodaTimeVersion>
+    <jrubyVersion>9.0.0.0.rc1</jrubyVersion>
     <karafVersion>2.4.0</karafVersion>
     <karafPaxExamVersion>2.3.9</karafPaxExamVersion>
     <felixVersion>2.3.0</felixVersion>
@@ -1154,7 +1232,7 @@
     <!-- ALWAYS change aspectj to match the version referenced in the spring poms -->
     <aspectjVersion>1.7.4</aspectjVersion>
     <springWebFlowVersion>2.3.4.RELEASE</springWebFlowVersion>
-    <springSecurityVersion>3.2.5.RELEASE</springSecurityVersion>
+    <springSecurityVersion>3.2.7.RELEASE</springSecurityVersion>
     <springLdapVersion>${springSecurityVersion}</springLdapVersion>
 
     <!-- moved here from topology features -->
@@ -1920,6 +1998,12 @@
       </dependency>
       <dependency>
         <groupId>org.opennms.dependencies</groupId>
+        <artifactId>jrrd2-dependencies</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.opennms.dependencies</groupId>
         <artifactId>pax-exam-dependencies</artifactId>
         <version>${project.version}</version>
         <type>pom</type>
@@ -2163,6 +2247,12 @@
       <dependency>
         <groupId>org.opennms.dependencies</groupId>
         <artifactId>jersey-dependencies</artifactId>
+        <version>${project.version}</version>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.opennms.dependencies</groupId>
+        <artifactId>jersey-client-dependencies</artifactId>
         <version>${project.version}</version>
         <type>pom</type>
       </dependency>
@@ -2622,7 +2712,7 @@
       <dependency>
         <groupId>commons-configuration</groupId>
         <artifactId>commons-configuration</artifactId>
-        <version>1.6</version>
+        <version>${commonsConfigurationVersion}</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -2638,7 +2728,7 @@
       <dependency>
         <groupId>commons-digester</groupId>
         <artifactId>commons-digester</artifactId>
-        <version>2.1</version>
+        <version>${commonsDigesterVersion}</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -3025,6 +3115,11 @@
         <version>99.99.99-use-opennms-jaxb</version>
       </dependency>
       <dependency>
+        <groupId>jdom</groupId>
+        <artifactId>jdom</artifactId>
+        <version>99.99.99-exclude-and-use-org.apache.servicemix.bundles.jdom-instead</version>
+      </dependency>
+      <dependency>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-ajp</artifactId>
         <version>${jettyVersion}</version>
@@ -3150,7 +3245,7 @@
       <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>2.1</version>
+        <version>${jodaTimeVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.skyscreamer</groupId>
@@ -3410,7 +3505,7 @@
       <dependency>
         <groupId>org.krupczak</groupId>
         <artifactId>xmp</artifactId>
-        <version>1.30r1</version>
+        <version>1.40</version>
       </dependency>
       <dependency>
         <groupId>xmlunit</groupId>
